--- a/Application/SortingAlgorithm/MadisonScheduler/MadisonScheduler/MadisonScheduler.csproj
+++ b/Application/SortingAlgorithm/MadisonScheduler/MadisonScheduler/MadisonScheduler.csproj
@@ -42,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Kindergarten.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Teacher.cs" />
+    <Compile Include="TeacherFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
