--- a/Application/SortingAlgorithm/MadisonScheduler/MadisonScheduler/MadisonScheduler.csproj
+++ b/Application/SortingAlgorithm/MadisonScheduler/MadisonScheduler/MadisonScheduler.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Teacher.cs" />
+    <Compile Include="TeacherFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
